python: update 'CHANGES.txt'

--- a/python/CHANGES.txt
+++ b/python/CHANGES.txt
@@ -9,6 +9,7 @@ Release 0.3.0
 -------------
 
 * enhanced 'ok (s1) == s2' to display unified diff (diff -u)
+* improved compatibility with unittest module
 
 
 Release 0.2.2
