--- a/python/CHANGES.txt
+++ b/python/CHANGES.txt
@@ -5,6 +5,15 @@ CHANGES
 $Release: 0.3.0 $
 
 
+Release 0.4.0
+-------------
+
+* enhanced to support 'ok (x).in_delta(y, d)' which raises assertion exception
+  unless y-d < x < y+d.
+* change test script to support Python 2.7 and 3.x.
+* fixed several bugs.
+
+
 Release 0.3.0
 -------------
 
