python: update 'README.txt' and 'CHANGES.txt'

--- a/python/CHANGES.txt
+++ b/python/CHANGES.txt
@@ -5,6 +5,19 @@ CHANGES
 $Release: 0.4.0 $
 
 
+Release 0.5.0
+-------------
+
+* change default argument of 'run()' to '.*Test(Case)$'.
+* new helper function 'help()' which describes test specification.
+* new helper function 'dummy_values()' which changes dictionary temporarily.
+* new helper function 'dummy_attrs()' which changes object's attributes temporarily.
+* enhanced to report untested AssertionObject.
+* 'TestCaseRunner' class is renamed to 'TestRunner'.
+* (undocumented) new helper function 'dummy_environ_vars()'.
+* (undocumented) new helper function 'using()'.
+
+
 Release 0.4.0
 -------------
 
