--- a/python/CHANGES.txt
+++ b/python/CHANGES.txt
@@ -8,7 +8,7 @@ $Release: 0.5.0 $
 Release 0.6.0
 -------------
 
-* enhanced to add 'intercept()' helper. see readme for details.
+* enhanced to add 'Tracer' and 'FakeObject' class. see README for details.
 * change 'run()' to sort classes order by lineno in source file.
 
 
