--- a/perl/README
+++ b/perl/README
@@ -153,6 +153,7 @@ DESCRIPTION
                     OK (1+1) >= 2;
                     OK (1+1) <  3;
                     OK (1+1) <= 2;
+                    OK (1+1)->cmp('==', 2);   # or '!=', '>', and so on
                     OK (3.141)->in_delta(3.14, 0.01);
                 };
 
@@ -163,12 +164,15 @@ DESCRIPTION
                     OK ('aaa') le 'aaa';
                     OK ('bbb') gt 'aaa';
                     OK ('aaa') ge 'aaa';
+                    OK ('aaa')->cmp('eq', 'aaa');   # or 'ne', 'lt', and so on
                     OK ('aaa')->length(3);
                 };
 
                 spec "logical expression", sub {
-                    OK (1==1)->is_true();
-                    OK (0==1)->is_false();
+                    OK (1==1)->is_truthy();
+                    OK (0==1)->is_falsy();
+                    OK (0)->is_defined();
+                    OK (undef)->not_defined();
                 };
 
                 spec "regular expression", sub {
@@ -205,12 +209,8 @@ DESCRIPTION
                     use Cwd qw(getcwd);
                     my $file = __FILE__;
                     my $pwd  = getcwd();
-                    OK ($file)->is_file();
-                    OK ($pwd )->is_dir();
-                    OK ($file)->exist();
-                    OK ($pwd )->exist();
-                    OK ($pwd )->not_file();
-                    OK ($file)->not_dir();
+                    OK ($file)->file_exists();
+                    OK ($pwd )->dir_exists();
                     OK ("NotExist.txt")->not_exist();
                 };
 
@@ -237,7 +237,7 @@ DESCRIPTION
     Assertion methods are chainable.
 
             ## object is an array reference and it's length is 3.
-            OK ([1,2,3])->is_arrayref()->length(3);
+            OK ([1,2,3])->is_ref('ARRAY')->length(3);
             ## object has 'name' and 'team' attributes.
             OK ($obj)->has('name', "Haruhi")->has('team', "SOS");
 
@@ -387,6 +387,44 @@ DESCRIPTION
                 spec "another cool feature is available";
 
             };
+
+  Test::More Migration
+    Oktest provides helpers to migrate Test::More script into Oktest.
+
+    Migration example (06_migrate.t):
+
+            use strict;
+            use warnings;
+            no warnings 'void';   # suppress 'Useless use of ... in void context'
+
+            use Oktest;
+            use Oktest::Migration::TestMore;    # imports migration helpers
+
+            target "Migration Example", sub {
+
+                spec "helpers", sub {
+                    ok(1+1 == 2, "test name");
+                    is(1+1, 2, "test name");
+                    isnt(1+1, 3, "test name");
+                    like("SOS", qr/^SOS$/, "test name");
+                    unlike("SOS", qr/^ZOZ$/, "test name");
+                    cmp_ok(1+1, '>', 1, "test name");
+                    is_deeply([1,2,3], [1,2,3], "test name");   ## !! EXPERIMENTAL !!
+                    my $obj = bless({}, 'Dummy');
+                    can_ok($obj, 'isa');
+                    isa_ok($obj, 'Dummy', "test name");
+                    throws_ok(sub { die("SOS\n") }, "SOS\n", "test name");
+                    throws_ok(sub { die("SOS\n") }, qr/SOS/, "test name");
+                    dies_ok(sub { die("SOS\n") }, "test name");
+                    lives_ok(sub { return 1 }, "test name");
+                    warning_like(sub { warn("SOS\n") }, qr/SOS/, "test name");
+                    diag("message");
+                };
+
+            };
+
+            Oktest::main() if $0 eq __FILE__;
+            1;
 
   Filter by Pattern
     You can filter targets or specs by pattern.
